# Set

./: .gitignore  .travis.yml  Cargo.toml  README.md  index.html  package.json  set.gc.wasm
.circleci/: config.yml  config.yml 
demo/: README.md  app.js  index.js  package-lock.json  package.json  webpack.config.js
demo/public/: app.js  index.html
pkg/: README.md  package.json  set.d.ts  set.js  set_bg.d.ts  set_bg.js  set_bg.wasm  set_bg.wasm.d.ts
pkg/node/: set.js  set_bg.js  set_bg.wasm
pkg/web/: set.js  set_bg.wasm
src/: lib.rs
tests/: package.json  test.js  webpack.config.js
